--- a/rs/tests/execution/Cargo.toml
+++ b/rs/tests/execution/Cargo.toml
@@ -34,6 +34,7 @@ ic-crypto-sha2 = { path = "../../crypto/sha2" }
 tokio = { workspace = true }
 wat = { workspace = true }
 assert_matches = { workspace = true }
+ic-registry-routing-table = { path = "../../registry/routing_table" }
 
 [[bin]]
 name = "compute_allocation_test"
@@ -62,3 +63,7 @@ path = "system_api_security_test.rs"
 [[bin]]
 name = "system_subnets_test"
 path = "system_subnets_test.rs"
+
+[[bin]]
+name = "fill_execution_rounds_workload"
+path = "fill_execution_rounds_workload.rs"
