--- a/rs/ledger_suite/icrc1/ledger/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/ledger/BUILD.bazel
@@ -64,6 +64,23 @@ package(default_visibility = ["//visibility:public"])
                 "@crate_index//:canbench-rs",
             ],
         ),
+        (
+            "_nextledgerversion",
+            "",
+            ["next-ledger-version"],
+            [
+            ],
+        ),
+        (
+            "_u256_nextledgerversion",
+            "_u256",
+            [
+                "next-ledger-version",
+                "u256-tokens",
+            ],
+            [
+            ],
+        ),
     ]
 ]
 
@@ -156,6 +173,24 @@ package(default_visibility = ["//visibility:public"])
                 "//rs/ledger_suite/icrc1/tokens_u256",
             ],
         ),
+        (
+            "_nextledgerversion",
+            [],
+            [
+                ":ledger_nextledgerversion",
+                "//rs/ledger_suite/icrc1/tokens_u64",
+            ],
+        ),
+        (
+            "_u256_nextledgerversion",
+            [
+                "u256-tokens",
+            ],
+            [
+                ":ledger_u256_nextledgerversion",
+                "//rs/ledger_suite/icrc1/tokens_u256",
+            ],
+        ),
     ]
 ]
 
@@ -179,6 +214,7 @@ rust_test(
         data = [
             ":block.cddl",
             ":ledger_canister" + name_suffix + ".wasm",
+            ":ledger_canister" + name_suffix + "_nextledgerversion.wasm",
             "//rs/ledger_suite/icrc1/archive:archive_canister" + name_suffix + ".wasm.gz",
             "@ic-icrc1-ledger-first-version.wasm.gz//file",
             "@mainnet_ckbtc_ic-icrc1-ledger//file",
@@ -193,6 +229,7 @@ rust_test(
             "IC_ICRC1_LEDGER_DEPLOYED_VERSION_WASM_PATH": "$(rootpath @mainnet_ic-icrc1-ledger//file)",
             "IC_ICRC1_LEDGER_FIRST_VERSION_WASM_PATH": "$(rootpath @ic-icrc1-ledger-first-version.wasm.gz//file)",
             "IC_ICRC1_LEDGER_WASM_PATH": "$(rootpath :ledger_canister" + name_suffix + ".wasm)",
+            "IC_ICRC1_LEDGER_NEXT_VERSION_WASM_PATH": "$(rootpath :ledger_canister" + name_suffix + "_nextledgerversion.wasm)",
         },
         deps = [
             # Keep sorted.
