--- a/ic-os/dev-tools/bare_metal_deployment/BUILD.bazel
+++ b/ic-os/dev-tools/bare_metal_deployment/BUILD.bazel
@@ -1,3 +1,5 @@
+load("@rules_python//python:pip.bzl", "whl_filegroup")
+
 package(default_visibility = ["//rs:ic-os-pkg"])
 
 exports_files([
@@ -5,3 +7,9 @@ exports_files([
     "benchmark_runner.sh",
     "benchmark_driver.sh",
 ])
+
+whl_filegroup(
+    name = "redfish_scripts",
+    pattern = ".*/scripts/.*",
+    whl = "@python_deps//idracredfishsupport:whl",
+)
