--- a/rs/nervous_system/integration_tests/BUILD.bazel
+++ b/rs/nervous_system/integration_tests/BUILD.bazel
@@ -103,7 +103,7 @@ DEV_DATA = [
     "//rs/ledger_suite/icrc1/ledger:ledger_canister",
     "//rs/rosetta-api/tvl/xrc_mock:xrc_mock_canister",
     "//rs/pocket_ic_server:pocket-ic-server",
-    "//rs/sns/governance:sns-governance-canister",
+    "//rs/sns/governance:sns-governance-canister-test",
     "@mainnet_sns-governance-canister//file",
     "//rs/sns/root:sns-root-canister",
     "@mainnet_sns-root-canister//file",
@@ -136,7 +136,7 @@ DEV_ENV = {
     "NEURON_CSV_PATH": "rs/nns/integration_tests/src/neurons.csv",
     "GENESIS_TOKEN_CANISTER_WASM_PATH": "$(rootpath //rs/nns/gtc:genesis-token-canister)",
     "SNS_WASM_CANISTER_WASM_PATH": "$(rootpath //rs/nns/sns-wasm:sns-wasm-canister)",
-    "SNS_GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath //rs/sns/governance:sns-governance-canister)",
+    "SNS_GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath //rs/sns/governance:sns-governance-canister-test)",
     "MAINNET_SNS_GOVERNANCE_CANISTER_WASM_PATH": "$(rootpath @mainnet_sns-governance-canister//file)",
     "SNS_ROOT_CANISTER_WASM_PATH": "$(rootpath //rs/sns/root:sns-root-canister)",
     "MAINNET_SNS_ROOT_CANISTER_WASM_PATH": "$(rootpath @mainnet_sns-root-canister//file)",
