--- a/.github/workflows-source/schedule-daily.yml
+++ b/.github/workflows-source/schedule-daily.yml
@@ -194,6 +194,10 @@ jobs:
     steps:
       - <<: *checkout
       - <<: *before-script
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
       - name: Setup environment deps
         id: setup-environment-deps
         shell: bash
