add for release

--- a/.github/workflows-source/release-testing.yml
+++ b/.github/workflows-source/release-testing.yml
@@ -148,6 +148,10 @@ jobs:
       - <<: *checkout
       - <<: *before-script
       - <<: *docker-login
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
       - name: Setup python deps
         id: setup-python-deps
         shell: bash
