--- a/Cargo.toml
+++ b/Cargo.toml
@@ -361,6 +361,7 @@ members = [
     "rs/tests/consensus/tecdsa",
     "rs/tests/consensus/upgrade",
     "rs/tests/consensus/utils",
+    "rs/tests/crypto",
     "rs/tests/driver",
     "rs/tests/httpbin-rs",
     "rs/tests/networking",
