--- a/rs/tests/crypto/Cargo.toml
+++ b/rs/tests/crypto/Cargo.toml
@@ -8,9 +8,14 @@ documentation.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
+ic-agent = { workspace = true }
+ic-crypto-test-utils-reproducible-rng = { path = "../../crypto/test_utils/reproducible_rng" }
 ic-registry-subnet-type = { path = "../../registry/subnet_type" }
 ic-system-test-driver = { path = "../driver" }
 ic-types = { path = "../../types/types" }
+ic-universal-canister = { path = "../../universal_canister/lib" }
+k256 = { workspace = true }
+rand = { workspace = true }
 reqwest = { workspace = true }
 serde_cbor = { workspace = true }
 slog = { workspace = true }
