--- a/packages/pocket-ic/BUILD.bazel
+++ b/packages/pocket-ic/BUILD.bazel
@@ -69,7 +69,7 @@ rust_test(
 
 rust_test_suite(
     name = "test",
-    size = "medium",
+    size = "small",
     srcs = ["tests/tests.rs"],
     data = [
         ":test_canister.wasm",
@@ -79,9 +79,8 @@ rust_test_suite(
         "POCKET_IC_BIN": "$(rootpath //rs/pocket_ic_server:pocket-ic-server)",
         "TEST_WASM": "$(rootpath :test_canister.wasm)",
     },
-    flaky = False,
+    flaky = True,
     proc_macro_deps = MACRO_DEPENDENCIES,
-    tags = ["cpu:8"],
     deps = [":pocket-ic"] + DEPENDENCIES + TEST_DEPENDENCIES,
 )
 
