--- a/rs/ledger_suite/icp/test_utils/Cargo.toml
+++ b/rs/ledger_suite/icp/test_utils/Cargo.toml
@@ -15,6 +15,7 @@ ic-base-types = { path = "../../../types/base_types" }
 ic-icp-index = { path = "../index" }
 ic-ledger-core = { path = "../../common/ledger_core" }
 ic-nns-constants = { path = "../../../nns/constants" }
+ic-stable-structures = { workspace = true }
 ic-state-machine-tests = { path = "../../../state_machine_tests" }
 icp-ledger = { path = ".." }
 icrc-ledger-types = { path = "../../../../packages/icrc-ledger-types" }
