--- a/Cargo.toml
+++ b/Cargo.toml
@@ -468,6 +468,7 @@ actix-web = "4.9.0"
 actix-rt = "2.10.0"
 askama = { version = "0.12.1", features = ["serde-json"] }
 assert_matches = "1.5.0"
+async-recursion = "1.0.5"
 async-stream = "0.3.6"
 async-trait = "0.1.83"
 axum = "0.7.7"
