--- a/rs/ic_os/dev_test_tools/setupos-disable-checks/Cargo.toml
+++ b/rs/ic_os/dev_test_tools/setupos-disable-checks/Cargo.toml
@@ -8,5 +8,6 @@ anyhow = { workspace = true }
 clap = { workspace = true }
 indoc = "1.0.9"
 partition_tools = { path = "../../build_tools/partition_tools/" }
+regex = { workspace = true }
 tempfile = { workspace = true }
 tokio = { workspace = true }
