--- a/rs/tests/crypto/Cargo.toml
+++ b/rs/tests/crypto/Cargo.toml
@@ -22,6 +22,14 @@ slog = { workspace = true }
 tokio = { workspace = true }
 
 [[bin]]
+name = "ic_crypto_csp_umask_test"
+path = "ic_crypto_csp_umask_test.rs"
+
+[[bin]]
+name = "ic_crypto_fstrim_tool_test"
+path = "ic_crypto_fstrim_tool_test.rs"
+
+[[bin]]
 name = "request_signature_test"
 path = "request_signature_test.rs"
 
