--- a/rs/tests/crypto/Cargo.toml
+++ b/rs/tests/crypto/Cargo.toml
@@ -10,6 +10,7 @@ documentation.workspace = true
 anyhow = { workspace = true }
 ic-agent = { workspace = true }
 ic-crypto-test-utils-reproducible-rng = { path = "../../crypto/test_utils/reproducible_rng" }
+ic-fstrim-tool = { path = "../../ic_os/fstrim_tool" }
 ic-registry-subnet-type = { path = "../../registry/subnet_type" }
 ic-system-test-driver = { path = "../driver" }
 ic-types = { path = "../../types/types" }
