--- a/rs/tests/crypto/BUILD.bazel
+++ b/rs/tests/crypto/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//rs/tests:common.bzl", "COUNTER_CANISTER_RUNTIME_DEPS", "DEPENDENCIES", "GUESTOS_RUNTIME_DEPS", "MACRO_DEPENDENCIES")
+load("//rs/tests:common.bzl", "COUNTER_CANISTER_RUNTIME_DEPS", "GUESTOS_RUNTIME_DEPS", "MACRO_DEPENDENCIES")
 load("//rs/tests:system_tests.bzl", "system_test")
 
 package(default_visibility = ["//rs:system-tests-pkg"])
@@ -6,6 +6,26 @@ package(default_visibility = ["//rs:system-tests-pkg"])
 II_DEV_CANISTER_RUNTIME_DEPS = [
     # Keep sorted.
     "@ii_dev_canister//file",
+]
+
+DEPENDENCIES = [
+    "//rs/crypto/test_utils/reproducible_rng",
+    "//rs/ic_os/fstrim_tool",
+    "//rs/registry/subnet_type",
+    "//rs/tests/consensus/utils",
+    "//rs/tests/driver:ic-system-test-driver",
+    "//rs/types/types",
+    "//rs/universal_canister/lib",
+    "@crate_index//:anyhow",
+    "@crate_index//:candid",
+    "@crate_index//:ic-agent",
+    "@crate_index//:k256",
+    "@crate_index//:rand",
+    "@crate_index//:reqwest",
+    "@crate_index//:serde_bytes",
+    "@crate_index//:serde_cbor",
+    "@crate_index//:slog",
+    "@crate_index//:tokio",
 ]
 
 system_test(
