refactor: rename nns_url nns_urls (#1970)
Rename nns_url to nns_urls for better consistency and naming accuracy.
This rename shouldn't cause any backwards compatibility issues.

--- a/testnet/tools/BUILD.bazel
+++ b/testnet/tools/BUILD.bazel
@@ -8,6 +8,7 @@ genrule(
         "//ic-os/guestos/envs/prod:upload_update-img",
         "//ic-os/boundary-guestos/envs/dev:upload_disk-img",
         "//ic-os/boundary-guestos/envs/prod:upload_disk-img",
+        "build-guestos-config.sh",
         "//publish/binaries:legacy_upload",
         "//publish/canisters:upload",
     ],
